maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:4: error: object Univers is not a member of package plm
    var direction=plm.Univers.random3()
                      ^